--- a/tab-title-reader/popup.html
+++ b/tab-title-reader/popup.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="popup.css">
     </head>
     <body>
-        <h1>Title: </h1>
+        <h1 id="title">Title: </h1>
         <h2 id="tabTitle" style="color: red;"></h2>
     </body>
     <script src="./popup.js"></script>
