getting url of current tab

--- a/tab-title-reader/popup.html
+++ b/tab-title-reader/popup.html
@@ -4,8 +4,13 @@
         <link rel="stylesheet" href="popup.css">
     </head>
     <body>
-        <h1 id="title">Title: </h1>
-        <h2 id="tabTitle" style="color: red;"></h2>
+        <div class="curr-tab-title">
+            <h1 id="title">Title: </h1>
+            <h2 id="tabTitle" style="color: red;"></h2>
+        </div>
+
+        <button class="get-curr-url-btn">Get url</button>
+
+        <script src="./popup.js"></script>
     </body>
-    <script src="./popup.js"></script>
 </html>
