--- a/song-downloader-extension/popup.html
+++ b/song-downloader-extension/popup.html
@@ -7,18 +7,28 @@
     <body>
         <div class="container centered">
             <div class="headerContainer">
-                <h1 id="header" class="text-center"><mark>Youtube</mark> downloader</h1>
+                <img src="./icons/512.png" class="mx-auto" width="32" height="32">
+                <h1 id="header" class="text-center"><div style="color: #0d6efd;">Song</div> Downloader</h1>
+                <p>YouTube & Spotify supported.</p>
             </div>
-            <h1 id="test"></h1>
+            <h1 id="feedbackText"></h1>
+            <p id="feedbackParagraph"></p>
             <div class="spinner-border text-primary" role="status" id="loader">
                 <span class="visually-hidden">Loading...</span>
             </div>
             <h2 id="videoInfo" color="green"> </h2>
-            <div class="form-check form-switch center-checkbox">
-                <input class="form-check-input" type="checkbox" role="switch" id="audioOnlySwitch">
-                <label class="form-check-label" for="audioOnlySwitch" id="audioOnlySwitchLabel">Audio Only</label>
-            </div>
-            <button type="button" class="btn btn-primary" id="testBtn">Download</button>
+            <form id="urlForm">
+                <div class="form-group">
+                    <input type="text" class="form-control" id="songUrl" placeholder="Song Link">
+                    <div class="form-check form-switch center-checkbox my-1">
+                        <input class="form-check-input" type="checkbox" role="switch" id="audioOnlySwitch">
+                        <label class="form-check-label" for="audioOnlySwitch" id="audioOnlySwitchLabel">Audio Only</label>
+                    </div>
+                    <button type="button submit" class="btn btn-primary my-1" id="downloadUrlBtn">Download</button>
+                    <button type="button" class="btn btn-primary my-1" id="downloadCurrentTabBtn">Download current tab</button>
+                </div>
+            </form>
+            
         </div>
 
         <script src="./js/bootstrap.bundle.min.js"></script>
